macros/tests/compile_fail/type_parameter.stderr
error: [melbi] generic type parameter must have a trait bound (e.g., T: Numeric)
 --> tests/compile_fail/type_parameter.rs:6:21
  |
6 | fn generic_function<T>(x: T) -> T {
  |                     ^
